# face-recognition-in-classroom

./: .gitignore  ATTENDANCE_TRACKING_README.md  README.md  main.py  pyproject.toml  requirements.txt  test_attendance_db.py  test_finalize.py
config/: settings.py
core/: attendance_db.py  database.py  detector.py  embedder.py  recognizer.py  resolver.py
utils/: display.py  file_utils.py
